# PolyPaint

./: CMakeLists.txt
PolyPaint/: CMakeLists.txt  Curves.frag  GLShader.cpp  GLShader.h  PolyPaint.cpp  PolyPaint.h  Polygone.h  SimMath.cpp  shader.frag  shader.vert  shaderCurve.frag
PolyPaint/imgui/: CMakeLists.txt  imgui.cpp  imgui_impl_glfw.cpp  imgui_tables.cpp
